removes unused template options

--- a/thesis/latex/main.tex
+++ b/thesis/latex/main.tex
@@ -91,10 +91,7 @@
 %	THESIS CONTENT - CHAPTERS
 %----------------------------------------------------------------------------------------
 
-\ctparttext{You can put some informational part preamble text here. Illo principalmente su nos. Non message \emph{occidental} angloromanic da. Debitas effortio simplificate sia se, auxiliar summarios da que, se avantiate publicationes via. Pan in terra summarios, capital interlingua se que. Al via multo esser specimen, campo responder que da. Le usate medical addresses pro, europa origine sanctificate nos se.} % Text on the Part 1 page describing  the content in Part 1
-
-\part{Theory} % First part of the thesis
-
+\include{Chapters/Chapter00} % Chapter 1
 \include{Chapters/Chapter01} % Chapter 1
 \include{Chapters/Chapter02} % Chapter 1
 \include{Chapters/Chapter03} % Chapter 1
@@ -103,9 +100,6 @@
 
 %------------------------------------------------
 
-\ctparttext{You can put some informational part preamble text here. Illo principalmente su nos. Non message \emph{occidental} angloromanic da. Debitas effortio simplificate sia se, auxiliar summarios da que, se avantiate publicationes via. Pan in terra summarios, capital interlingua se que. Al via multo esser specimen, campo responder que da. Le usate medical addresses pro, europa origine sanctificate nos se.} % Text on the Part 2 page describing the content in Part 2
-
-\part{The Showcase} % Second part of the thesis
 
 %\include{Chapters/Chapter03} % Chapter 2
 %\include{Chapters/Chapter04} % Chapter 4 - empty template
@@ -118,16 +112,16 @@
 
 \appendix
 
-\part{Appendix} % New part of the thesis for the appendix
+%\part{Appendix} % New part of the thesis for the appendix
 
-\include{Chapters/Chapter0A} % Appendix A
+%\include{Chapters/Chapter0A} % Appendix A
 %\include{Chapters/Chapter0B} % Appendix B - empty template
 
 %----------------------------------------------------------------------------------------
 %	POST-CONTENT THESIS PAGES
 %----------------------------------------------------------------------------------------
 
-\cleardoublepage\include{FrontBackMatter/Bibliography} % Bibliography
+%\cleardoublepage\include{FrontBackMatter/Bibliography} % Bibliography
 
 %\cleardoublepage\include{FrontBackMatter/Declaration} % Declaration
 
