removes method and puts all preprocessing into the theory section

--- a/thesis/latex/main.tex
+++ b/thesis/latex/main.tex
@@ -91,10 +91,11 @@
 %	THESIS CONTENT - CHAPTERS
 %----------------------------------------------------------------------------------------
 
-\include{Chapters/Chapter00} % Chapter 1
-\include{Chapters/Chapter01} % Chapter 1
-\include{Chapters/Chapter02} % Chapter 1
-\include{Chapters/Chapter03} % Chapter 1
+\include{Chapters/Chapter00} % Introduction
+\include{Chapters/Chapter01} % Theory
+\include{Chapters/Chapter02} % Generating observations
+\include{Chapters/Chapter03} % Reductie Methodes
+\include{Chapters/Chapter04} % Resultaten
 
 \cleardoublepage % Empty page before the start of the next part
 
