--- a/thesis/latex/Bibliography.bib
+++ b/thesis/latex/Bibliography.bib
@@ -1,4 +1,4 @@
-@inproceedings{por2018hcipy,
+@inproceedings{hcipy,
         author = {Por, E.~H. and Haffert, S.~Y. and Radhakrishnan, V.~M. and Doelman, D.~S. and Van Kooten, M. and Bos, S.~P.},
         title = "{High Contrast Imaging for Python (HCIPy): an open-source adaptive optics and coronagraph simulator}",
         booktitle = {Adaptive Optics Systems VI},
@@ -9,3 +9,44 @@
         URL = {https://doi.org/10.1117/12.2314407}
 }
 
+@BOOK{hecht,
+  TITLE = {Optics},
+  SUBTITLE = {International Edition},
+  AUTHOR = {Hecht, Eugene},
+  YEAR = {2002}, % I looked it up
+  PUBLISHER = {Pearson},
+}
+
+@article{williams,
+author = {Williams, Jonathan and Cieza, Lucas},
+year = {2011},
+month = {03},
+pages = {},
+title = {Protoplanetary Disks and Their Evolution},
+volume = {49},
+journal = {Annual Review of Astronomy and Astrophysics - ANNU REV ASTRON ASTROPHYS},
+doi = {10.1146/annurev-astro-081710-102548}
+}
+
+@unknown{garufi,
+author = {Garufi, Antonio and Benisty, Myriam and Pinilla, P and Tazzari, Marco and Dominik, Carsten and Ginski, Christian and Henning, Thomas and Kral, Quentin and Langlois, Maud and Menard, Francois and Stolker, Tomas and Szulagyi, Judit and Villenave, Marion and van der Plas, Gerrit},
+year = {2018},
+month = {10},
+pages = {},
+title = {Evolution of protoplanetary disks from their taxonomy in scattered light: spirals, rings, cavities, and shadows}
+}
+
+@unpublished{pieter_okko,
+author = {Okko van der Haak and Pieter Speelman},
+year = {2018},
+month = {6},
+note = {Bachelor Thesis},
+title = {Stellar disk reconstruction using Spectro-polarimetry},
+}
+
+@article{vAPP_vs_APP,
+year = {2017},
+author = {David S. Doelman and Frans Snik and Nathaniel Z. Warriner and Michael J. Escuti},
+journal = {Proceedings SPIE 10400, Techniqes and Instrumentation for Detection of Exoplanets VIII},
+title = {Patterned liquid-crystal optics for broadband coronagraphy and wavefront sensing},
+}
