--- a/thesis/latex/main.tex
+++ b/thesis/latex/main.tex
@@ -91,10 +91,9 @@
 %	THESIS CONTENT - CHAPTERS
 %----------------------------------------------------------------------------------------
 
-\include{Chapters/Chapter00} % Chapter 1
-\include{Chapters/Chapter01} % Chapter 1
-\include{Chapters/Chapter02} % Chapter 1
-\include{Chapters/Chapter03} % Chapter 1
+\include{Chapters/Introduction} % Chapter 1
+\include{Chapters/Theory} % Chapter 2
+\include{Chapters/Method} % Chapter 1
 
 \cleardoublepage % Empty page before the start of the next part
 
@@ -121,7 +120,7 @@
 %	POST-CONTENT THESIS PAGES
 %----------------------------------------------------------------------------------------
 
-%\cleardoublepage\include{FrontBackMatter/Bibliography} % Bibliography
+\cleardoublepage\include{FrontBackMatter/Bibliography} % Bibliography
 
 %\cleardoublepage\include{FrontBackMatter/Declaration} % Declaration
 
