final draft first part of thesis

--- a/thesis/latex/Bibliography.bib
+++ b/thesis/latex/Bibliography.bib
@@ -9,11 +9,39 @@
         URL = {https://doi.org/10.1117/12.2314407}
 }
 
+@article{vAPP_vs_APP,
+year = {2017},
+author = {David S. Doelman and Frans Snik and Nathaniel Z. Warriner and Michael J. Escuti},
+journal = {Proceedings SPIE 10400, Techniqes and Instrumentation for Detection of Exoplanets VIII},
+title = {Patterned liquid-crystal optics for broadband coronagraphy and wavefront sensing},
+}
+
+@article{Marois_2006,
+	doi = {10.1086/500401},
+	url = {https://doi.org/10.1086%2F500401},
+	year = 2006,
+	month = {apr},
+	publisher = {{IOP} Publishing},
+	volume = {641},
+	number = {1},
+	pages = {556--564},
+	author = {Christian Marois and David Lafreniere and Rene Doyon and Bruce Macintosh and Daniel Nadeau},
+	title = {Angular Differential Imaging: A Powerful High-Contrast Imaging Technique},
+	journal = {The Astrophysical Journal},
+}
+
+@book{Electronic_imaging, 
+    author = {Ian S. McLean},
+    title = {Electronic Imaging in Astronomy},
+    year = {2008},
+    publisher= {Springer},
+}
+
 @BOOK{hecht,
   TITLE = {Optics},
   SUBTITLE = {International Edition},
   AUTHOR = {Hecht, Eugene},
-  YEAR = {2002}, % I looked it up
+  YEAR = {2002},
   PUBLISHER = {Pearson},
 }
 
@@ -28,7 +56,7 @@ journal = {Annual Review of Astronomy and Astrophysics - ANNU REV ASTRON ASTROPH
 doi = {10.1146/annurev-astro-081710-102548}
 }
 
-@unknown{garufi,
+@article{garufi,
 author = {Garufi, Antonio and Benisty, Myriam and Pinilla, P and Tazzari, Marco and Dominik, Carsten and Ginski, Christian and Henning, Thomas and Kral, Quentin and Langlois, Maud and Menard, Francois and Stolker, Tomas and Szulagyi, Judit and Villenave, Marion and van der Plas, Gerrit},
 year = {2018},
 month = {10},
@@ -44,9 +72,12 @@ note = {Bachelor Thesis},
 title = {Stellar disk reconstruction using Spectro-polarimetry},
 }
 
-@article{vAPP_vs_APP,
-year = {2017},
-author = {David S. Doelman and Frans Snik and Nathaniel Z. Warriner and Michael J. Escuti},
-journal = {Proceedings SPIE 10400, Techniqes and Instrumentation for Detection of Exoplanets VIII},
-title = {Patterned liquid-crystal optics for broadband coronagraphy and wavefront sensing},
+@article{rings,
+author = {Lodato, Giuseppe and Dipierro, Giovanni and Ragusa, Enrico and Long, Feng and Herczeg, Gregory J and Pascucci, Ilaria and Pinilla, Paola and Manara, Carlo F and Tazzari, Marco and Liu, Yao and Mulders, Gijs D and Harsono, Daniel and Boehler, Yann and Ménard, François and Johnstone, Doug and Salyk, Colette and van der Plas, Gerrit and Cabrit, Sylvie and Edwards, Suzan and Fischer, William J and Hendler, Nathan and Nisini, Brunella and Rigliaco, Elisabetta and Avenhaus, Henning and Banzatti, Andrea and Gully-Santiago, Michael},
+year = {2019},
+month = {03},
+pages = {453-461},
+title = {The newborn planet population emerging from ring-like structures in discs},
+volume = {486},
+journal = {Monthly Notices of the Royal Astronomical Society},
 }
