--- a/thesis/latex/main.tex
+++ b/thesis/latex/main.tex
@@ -62,9 +62,9 @@
 %	PRE-CONTENT THESIS PAGES
 %----------------------------------------------------------------------------------------
 
-\include{FrontBackMatter/Titlepage} % Main title page
+%\include{FrontBackMatter/Titlepage} % Main title page
 
-\include{FrontBackMatter/Titleback} % Back of the title page
+%\include{FrontBackMatter/Titleback} % Back of the title page
 
 %\cleardoublepage\include{FrontBackMatter/Dedication} % Dedication page
 
@@ -74,7 +74,7 @@
 
 %\cleardoublepage\include{FrontBackMatter/Publications} % Publications from the thesis page
 
-\cleardoublepage\include{FrontBackMatter/Acknowledgments} % Acknowledgements page
+%\cleardoublepage\include{FrontBackMatter/Acknowledgments} % Acknowledgements page
 
 \pagestyle{scrheadings} % Show chapter titles as headings
 
@@ -92,6 +92,8 @@
 %----------------------------------------------------------------------------------------
 
 \include{Chapters/Introduction} % Chapter 1
+\acresetall
+
 \include{Chapters/Theory} % Chapter 2
 \include{Chapters/Method} % Chapter 1
 
