thesis at first draft level up til DataReduction

--- a/thesis/latex/Bibliography.bib
+++ b/thesis/latex/Bibliography.bib
@@ -16,6 +16,41 @@ journal = {Proceedings SPIE 10400, Techniqes and Instrumentation for Detection o
 title = {Patterned liquid-crystal optics for broadband coronagraphy and wavefront sensing},
 }
 
+@Misc{scipy,
+  author =    {Eric Jones and Travis Oliphant and Pearu Peterson and others},
+  title =     {{SciPy}: Open source scientific tools for {Python}},
+  year =      {2001--},
+  url = "http://www.scipy.org/",
+  note = {[Online; accessed 21 may 2019]}
+}
+
+@Misc{numpy,
+  author =    {Travis Oliphant},
+  title =     {{NumPy}: A guide to {NumPy}},
+  year =      {2006--},
+  howpublished = {USA: Trelgol Publishing},
+  url = "http://www.numpy.org/",
+  note = {[Online; accessed 22 may 2019]}
+ }
+
+
+@article{register_translation,
+author = {Manuel Guizar-Sicairos and Samuel T. Thurman and James R. Fienup},
+journal = {Opt. Lett.},
+keywords = {Digital image processing; Image reconstruction-restoration; Pattern recognition; Phase retrieval; Fast Fourier transforms; Fourier transforms; Image processing; Image quality; Image registration; Phase retrieval},
+number = {2},
+pages = {156--158},
+publisher = {OSA},
+title = {Efficient subpixel image registration algorithms},
+volume = {33},
+month = {Jan},
+year = {2008},
+url = {http://ol.osa.org/abstract.cfm?URI=ol-33-2-156},
+doi = {10.1364/OL.33.000156},
+abstract = {Three new algorithms for 2D translation image registration to within a small fraction of a pixel that use nonlinear optimization and matrix-multiply discrete Fourier transforms are compared. These algorithms can achieve registration with an accuracy equivalent to that of the conventional fast Fourier transform upsampling approach in a small fraction of the computation time and with greatly reduced memory requirements. Their accuracy and computation time are compared for the purpose of evaluating a translation-invariant error metric.},
+}
+
+
 @article{Marois_2006,
 	doi = {10.1086/500401},
 	url = {https://doi.org/10.1086%2F500401},
