--- a/thesis/latex/classicthesis-config.tex
+++ b/thesis/latex/classicthesis-config.tex
@@ -91,7 +91,6 @@ maxbibnames=10, % default: 3, et al.
 natbib=true % natbib compatibility mode (\citep and \citet still work)
 }{biblatex}
 \usepackage{biblatex}
- 
  %------------------------------------------------
 
 \PassOptionsToPackage{fleqn}{amsmath} % Math environments and more by the AMS 
@@ -103,7 +102,7 @@ natbib=true % natbib compatibility mode (\citep and \citet still work)
 
 \PassOptionsToPackage{T1}{fontenc} % T2A for cyrillics
 \usepackage{fontenc}
-
+\usepackage{enumerate}% http://ctan.org/pkg/enumerate
 %------------------------------------------------
 \usepackage{textcomp} % Fix warning with missing font shapes
 
