--- a/thesis/latex/main.tex
+++ b/thesis/latex/main.tex
@@ -95,7 +95,10 @@
 \acresetall
 
 \include{Chapters/Theory} % Chapter 2
-\include{Chapters/Method} % Chapter 1
+\include{Chapters/DataGeneration} % Chapter 3
+\include{Chapters/DataReduction} % Chapter 4
+\include{Chapters/Results} % Chapter 4
+\include{Chapters/Discussion} % Chapter 4
 
 \cleardoublepage % Empty page before the start of the next part
 
