reworked text based on feedback

--- a/thesis/latex/Bibliography.bib
+++ b/thesis/latex/Bibliography.bib
@@ -9,7 +9,43 @@
         URL = {https://doi.org/10.1117/12.2314407}
 }
 
-@article{vAPP_vs_APP,
+@article{vapp_snik,
+author = {Snik, Frans and Otten, Gilles and Kenworthy, Matthew and Miskiewicz, Matthew and Escuti, Michael and Packham, Christopher and Codona, Johanan},
+year = {2012},
+month = {07},
+title = {The Vector-APP: a Broadband Apodizing Phase Plate that yields
+Complementary PSFs},
+volume = {8450},
+journal = {Proc SPIE},
+doi = {10.1117/12.926222}
+}
+
+@ARTICLE{vapp_otten,
+       author = {{Otten}, Gilles P.~P.~L. and {Snik}, Frans and {Kenworthy}, Matthew A. and
+         {Keller}, Christoph U. and {Males}, Jared R. and {Morzinski}, Katie M. and
+         {Close}, Laird M. and {Codona}, Johanan L. and {Hinz}, Philip M. and
+         {Hornburg}, Kathryn J. and {Brickson}, Leandra L. and
+         {Escuti}, Michael J.},
+        title = "{On-sky Performance Analysis of the Vector Apodizing Phase Plate Coronagraph on MagAO/Clio2}",
+      journal = {The Astrophysical Journal},
+     keywords = {infrared: planetary systems, instrumentation: high angular resolution, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = "2017",
+        month = "Jan",
+       volume = {834},
+       number = {2},
+          eid = {175},
+        pages = {175},
+          doi = {10.3847/1538-4357/834/2/175},
+archivePrefix = {arXiv},
+       eprint = {1702.04193},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017ApJ...834..175O},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@article{vapp_doelman,
 year = {2017},
 author = {David S. Doelman and Frans Snik and Nathaniel Z. Warriner and Michael J. Escuti},
 journal = {Proceedings SPIE 10400, Techniqes and Instrumentation for Detection of Exoplanets VIII},
