--- a/thesis/latex/classicthesis-config.tex
+++ b/thesis/latex/classicthesis-config.tex
@@ -103,6 +103,7 @@ natbib=true % natbib compatibility mode (\citep and \citet still work)
 \PassOptionsToPackage{T1}{fontenc} % T2A for cyrillics
 \usepackage{fontenc}
 \usepackage{enumerate}% http://ctan.org/pkg/enumerate
+\usepackage{ifoddpage}
 %------------------------------------------------
 \usepackage{textcomp} % Fix warning with missing font shapes
 
