adds result section and some plots

--- a/thesis/latex/classicthesis-config.tex
+++ b/thesis/latex/classicthesis-config.tex
@@ -104,6 +104,10 @@ natbib=true % natbib compatibility mode (\citep and \citet still work)
 \usepackage{fontenc}
 \usepackage{enumerate}% http://ctan.org/pkg/enumerate
 \usepackage{ifoddpage}
+\usepackage{booktabs}
+\usepackage{makecell}
+\renewcommand\theadfont{\normalsize}
+
 %------------------------------------------------
 \usepackage{textcomp} % Fix warning with missing font shapes
 
