changes text in according to feedback given

--- a/thesis/latex/Bibliography.bib
+++ b/thesis/latex/Bibliography.bib
@@ -101,6 +101,20 @@ abstract = {Three new algorithms for 2D translation image registration to within
 	journal = {The Astrophysical Journal},
 }
 
+@ARTICLE{marois_2005,
+       author = {{Marois}, Christian and {Doyon}, R. and {Racine}, R. and {Nadeau}, D. and
+         {Lafreniere}, D. and {Vallee}, P. and {Riopel}, M. and {Macintosh}, B.},
+        title = "{Direct Exoplanet Imaging around Sun-like Stars: Beating the Speckle Noise with Innovative Imaging Techniques}",
+      journal = {\jrasc},
+         year = "2005",
+        month = "Aug",
+       volume = {99},
+       number = {4},
+        pages = {130},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2005JRASC..99..130M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @book{Electronic_imaging, 
     author = {Ian S. McLean},
     title = {Electronic Imaging in Astronomy},
