this draft done up till results + appandice

--- a/thesis/latex/Bibliography.bib
+++ b/thesis/latex/Bibliography.bib
@@ -43,6 +43,56 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{self_sub1,
+       author = {{Perrot}, C. and {Boccaletti}, A. and {Pantin}, E. and
+         {Augereau}, J. -C. and {Lagrange}, A. -M. and {Galicher}, R. and
+         {Maire}, A. -L. and {Mazoyer}, J. and {Milli}, J. and {Rousset}, G. and
+         {Gratton}, R. and {Bonnefoy}, M. and {Brandner}, W. and {Buenzli}, E. and
+         {Langlois}, M. and {Lannier}, J. and {Mesa}, D. and {Peretti}, S. and
+         {Salter}, G. and {Sissa}, E. and {Chauvin}, G. and {Desidera}, S. and
+         {Feldt}, M. and {Vigan}, A. and {Di Folco}, E. and {Dutrey}, A. and
+         {P{\'e}ricaud}, J. and {Baudoz}, P. and {Benisty}, M. and
+         {De Boer}, J. and {Garufi}, A. and {Girard}, J.~H. and {Menard}, F. and
+         {Olofsson}, J. and {Quanz}, S.~P. and {Mouillet}, D. and
+         {Christiaens}, V. and {Casassus}, S. and {Beuzit}, J. -L. and
+         {Blanchard}, P. and {Carle}, M. and {Fusco}, T. and {Giro}, E. and
+         {Hubin}, N. and {Maurel}, D. and {Moeller-Nilsson}, O. and {Sevin}, A. and
+         {Weber}, L.},
+        title = "{Discovery of concentric broken rings at sub-arcsec separations in the HD 141569A gas-rich, debris disk with VLT/SPHERE}",
+      journal = {Astronomy \& Astrophysics},
+     keywords = {stars: individual: HD 141569A, protoplanetary disks, planet-disk interactions, stars: early-type, techniques: high angular resolution, techniques: image processing, Astrophysics - Earth and Planetary Astrophysics},
+         year = "2016",
+        month = "May",
+       volume = {590},
+          eid = {L7},
+        pages = {L7},
+          doi = {10.1051/0004-6361/201628396},
+archivePrefix = {arXiv},
+       eprint = {1605.00468},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016A&A...590L...7P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{self_sub2,
+       author = {{Reggiani}, M. and {Christiaens}, V. and {Absil}, O. and {Mawet}, D. and
+         {Huby}, E. and {Choquet}, E. and {Gomez Gonzalez}, C.~A. and
+         {Ruane}, G. and {Femenia}, B. and {Serabyn}, E. and {Matthews}, K. and
+         {Barraza}, M. and {Carlomagno}, B. and {Defrere}, D. and
+         {Delacroix}, C. and {Habraken}, S. and {Jolivet}, A. and
+         {Karlsson}, M. and {Orban de Xivry}, G. and {Piron}, P. and
+         {Surdej}, J. and {Vargas Catalan}, E. and {Wertz}, O.},
+        title = "{VizieR Online Data Catalog: Angular differential imaging of MCW 758 (Reggiani+, 2018)}",
+      journal = {VizieR Online Data Catalog},
+     keywords = {Stars: Be, Photometry: infrared},
+         year = "2017",
+        month = "Nov",
+          eid = {J/A+A/611/A74},
+        pages = {J/A+A/611/A74},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017yCat..36110074R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
 @article{vapp_doelman,
@@ -105,7 +155,7 @@ abstract = {Three new algorithms for 2D translation image registration to within
        author = {{Marois}, Christian and {Doyon}, R. and {Racine}, R. and {Nadeau}, D. and
          {Lafreniere}, D. and {Vallee}, P. and {Riopel}, M. and {Macintosh}, B.},
         title = "{Direct Exoplanet Imaging around Sun-like Stars: Beating the Speckle Noise with Innovative Imaging Techniques}",
-      journal = {\jrasc},
+      journal = {Journal of the Royal Astronomical Society of Canada},
          year = "2005",
         month = "Aug",
        volume = {99},
