--- a/thesis/latex/classicthesis-config.tex
+++ b/thesis/latex/classicthesis-config.tex
@@ -154,7 +154,7 @@ natbib=true % natbib compatibility mode (\citep and \citet still work)
 \usepackage{caption}
 \captionsetup{font=small}
 \captionsetup[subfloat]{margin=0.5em}
-\usepackage{subcaption}  
+\usepackage{subcaption}  %TODO switch to subfig package (newer, still maintained)
 \usepackage{csquotes}
 %----------------------------------------------------------------------------------------
 %	CODE LISTINGS SETUP
