--- a/thesis/latex/main.tex
+++ b/thesis/latex/main.tex
@@ -98,7 +98,7 @@
 \include{Chapters/DataGeneration} % Chapter 3
 \include{Chapters/DataReduction} % Chapter 4
 \include{Chapters/Results} % Chapter 4
-\include{Chapters/Discussion} % Chapter 4
+%\include{Chapters/Discussion} % Chapter 4
 
 \cleardoublepage % Empty page before the start of the next part
 
@@ -114,18 +114,19 @@
 %	THESIS CONTENT - APPENDICES
 %----------------------------------------------------------------------------------------
 
-\appendix
+\cleardoublepage
+
 
 %\part{Appendix} % New part of the thesis for the appendix
 
-%\include{Chapters/Chapter0A} % Appendix A
+\include{FrontBackMatter/Bibliography} % Bibliography
+\include{FrontBackMatter/Appendix} % Bibliography
+
 %\include{Chapters/Chapter0B} % Appendix B - empty template
 
 %----------------------------------------------------------------------------------------
 %	POST-CONTENT THESIS PAGES
 %----------------------------------------------------------------------------------------
-
-\cleardoublepage\include{FrontBackMatter/Bibliography} % Bibliography
 
 %\cleardoublepage\include{FrontBackMatter/Declaration} % Declaration
 
