first section of discussion and conclusion done

--- a/thesis/latex/main.tex
+++ b/thesis/latex/main.tex
@@ -97,8 +97,8 @@
 \include{Chapters/Theory} % Chapter 2
 \include{Chapters/DataGeneration} % Chapter 3
 \include{Chapters/DataReduction} % Chapter 4
-\include{Chapters/Results} % Chapter 4
-%\include{Chapters/Discussion} % Chapter 4
+\include{Chapters/Results} % Chapter 5
+\include{Chapters/Discussion} % Chapter 6
 
 \cleardoublepage % Empty page before the start of the next part
 
