moves fourier method to appendix, tweaks future work and discussion

--- a/thesis/latex/Bibliography.bib
+++ b/thesis/latex/Bibliography.bib
@@ -93,6 +93,126 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{planet_form,
+       author = {{Boss}, A.~P.},
+        title = "{Giant planet formation by gravitational instability.}",
+      journal = {Science},
+     keywords = {Jovian Planets: Formation, Solar Nebula: Gravitational Instability, Protoplanetary Disks: Hydrodynamics},
+         year = "1997",
+        month = "Jan",
+       volume = {276},
+        pages = {1836-1839},
+          doi = {10.1126/science.276.5320.1836},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1997Sci...276.1836B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{disk_debate,
+       author = {{Montesinos}, Mat{\'\i}as and {Perez}, Sebastian and {Casassus}, Simon and
+         {Marino}, Sebastian and {Cuadra}, Jorge and {Christiaens}, Valentin},
+        title = "{Spiral Waves Triggered by Shadows in Transition Disks}",
+      journal = {The Astrophysical Journal Letters},
+     keywords = {accretion, accretion disks, hydrodynamics, methods: numerical, planets and satellites: dynamical evolution and stability, protoplanetary disks, Astrophysics - Earth and Planetary Astrophysics},
+         year = "2016",
+        month = "May",
+       volume = {823},
+       number = {1},
+          eid = {L8},
+        pages = {L8},
+          doi = {10.3847/2041-8205/823/1/L8},
+archivePrefix = {arXiv},
+       eprint = {1601.07912},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...823L...8M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Pollack,
+       author = {{Pollack}, James B. and {Hubickyj}, Olenka and {Bodenheimer}, Peter and
+         {Lissauer}, Jack J. and {Podolak}, Morris and {Greenzweig}, Yuval},
+        title = "{Formation of the Giant Planets by Concurrent Accretion of Solids and Gas}",
+      journal = {Icarus},
+         year = "1996",
+        month = "Nov",
+       volume = {124},
+       number = {1},
+        pages = {62-85},
+          doi = {10.1006/icar.1996.0190},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1996Icar..124...62P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{rdi,
+       author = {{Ruane}, Garreth and {Ngo}, Henry and {Mawet}, Dimitri and
+         {Absil}, Olivier and {Choquet}, {\'E}lodie and {Cook}, Therese and
+         {Gomez Gonzalez}, Carlos and {Huby}, Elsa and {Matthews}, Keith and
+         {Meshkat}, Tiffany and {Reggiani}, Maddalena and {Serabyn}, Eugene and
+         {Wallack}, Nicole and {Xuan}, W. Jerry},
+        title = "{Reference Star Differential Imaging of Close-in Companions and Circumstellar Disks with the NIRC2 Vortex Coronagraph at the W. M. Keck Observatory}",
+      journal = {The Astrophysical Journal},
+     keywords = {planets and satellites: detection, protoplanetary disks, stars: imaging, stars: individual: MWC 758, 2MASS J16042165{\ensuremath{-}}2130284, techniques: high angular resolution, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Earth and Planetary Astrophysics, Physics - Optics},
+         year = "2019",
+        month = "Mar",
+       volume = {157},
+       number = {3},
+          eid = {118},
+        pages = {118},
+          doi = {10.3847/1538-3881/aafee2},
+archivePrefix = {arXiv},
+       eprint = {1901.04090},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019AJ....157..118R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{rdi_2,
+       author = {{Ligi}, R. and {Vigan}, A. and {Gratton}, R. and {de Boer}, J. and
+         {Benisty}, M. and {Boccaletti}, A. and {Quanz}, S.~P. and {Meyer}, M. and
+         {Ginski}, C. and {Sissa}, E. and {Gry}, C. and {Henning}, T. and
+         {Beuzit}, J. -L. and {Biller}, B. and {Bonnefoy}, M. and {Chauvin}, G. and
+         {Cheetham}, A.~C. and {Cudel}, M. and {Delorme}, P. and {Desidera}, S. and
+         {Feldt}, M. and {Galicher}, R. and {Girard}, J. and {Janson}, M. and
+         {Kasper}, M. and {Kopytova}, T. and {Lagrange}, A. -M. and
+         {Langlois}, M. and {Lecoroller}, H. and {Maire}, A. -L. and
+         {M{\'e}nard}, F. and {Mesa}, D. and {Peretti}, S. and {Perrot}, C. and
+         {Pinilla}, P. and {Pohl}, A. and {Rouan}, D. and {Stolker}, T. and
+         {Samland}, M. and {Wahhaj}, Z. and {Wildi}, F. and {Zurlo}, A. and
+         {Buey}, T. and {Fantinel}, D. and {Fusco}, T. and {Jaquet}, M. and
+         {Moulin}, T. and {Ramos}, J. and {Suarez}, M. and {Weber}, L.},
+        title = "{Investigation of the inner structures around HD 169142 with VLT/SPHERE}",
+      journal = {Monthly Notices of the Royal Astronomical Society},
+     keywords = {Stars: individual: HD169142, Planets and satellites: detection, formation, Techniques: high angular resolution, Protoplanetary disc, Astrophysics - Earth and Planetary Astrophysics},
+         year = "2018",
+        month = "Jan",
+       volume = {473},
+       number = {2},
+        pages = {1774-1783},
+          doi = {10.1093/mnras/stx2318},
+archivePrefix = {arXiv},
+       eprint = {1709.01734},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018MNRAS.473.1774L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{yorke1993,
+       author = {{Yorke}, Harold W. and {Bodenheimer}, Peter and {Laughlin}, Gregory},
+        title = "{The Formation of Protostellar Disks. I. 1 M sub sun}",
+      journal = {The Astrophysical Journal},
+     keywords = {Gravitational Collapse, Molecular Clouds, Protostars, Star Formation, Stellar Mass, Angular Momentum, Angular Velocity, Interstellar Matter, Magnetic Clouds, Astrophysics, HYDRODYNAMICS, ISM: CLOUDS, METHODS: NUMERICAL, SOLAR SYSTEM: FORMATION, STARS: FORMATION},
+         year = "1993",
+        month = "Jul",
+       volume = {411},
+        pages = {274},
+          doi = {10.1086/172827},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1993ApJ...411..274Y},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
 @article{vapp_doelman,
