--- a/thesis/latex/main.tex
+++ b/thesis/latex/main.tex
@@ -62,15 +62,16 @@
 %	PRE-CONTENT THESIS PAGES
 %----------------------------------------------------------------------------------------
 
-%\include{FrontBackMatter/Titlepage} % Main title page
+\include{FrontBackMatter/Titlepage} % Main title page
 
-%\include{FrontBackMatter/Titleback} % Back of the title page
+\include{FrontBackMatter/Titleback} % Back of the title page
 
 %\cleardoublepage\include{FrontBackMatter/Dedication} % Dedication page
 
 %\cleardoublepage\include{FrontBackMatter/Foreword} % Uncomment and create a Foreword.tex to include a foreword
 
 \cleardoublepage\include{FrontBackMatter/Abstract} % Abstract page
+\acresetall
 
 %\cleardoublepage\include{FrontBackMatter/Publications} % Publications from the thesis page
 
@@ -99,6 +100,7 @@
 \include{Chapters/DataReduction} % Chapter 4
 \include{Chapters/Results} % Chapter 5
 \include{Chapters/Discussion} % Chapter 6
+\include{Chapters/FutureWork} % Chapter 6
 
 \cleardoublepage % Empty page before the start of the next part
 
